cleaned up the dirs a bit

--- a/2-Download_TPCA.ipynb
+++ b/2-Download_TPCA.ipynb
@@ -5,9 +5,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!git push"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -149,6 +147,8 @@
    "outputs": [],
    "source": [
     "#Cut PhyDownload_TPCA()\n",
+    "\n",
+    "#Ok is defunct. But need to update the core function in Process Data to allow for isel(st_ocean=d)\n",
     "def cut_phyto():\n",
     "    bgc_month= xr.open_zarr('/OSM/CBR/OA_DCFP/data/model_output/CAFE/data_assimilation/d60-zarr/ocean_bgc_month.zarr',consolidated=True)\n",
     "    bgc_month['xt_ocean']=bgc_month['xt_ocean']+360\n",
