--- a/2-Download_TPCA.ipynb
+++ b/2-Download_TPCA.ipynb
@@ -9,20 +9,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import xarray as xr\n",
+    "import numpy as np\n",
+    "from dask.distributed import Client\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "from scipy import stats\n",
+    "import xesmf as xe\n",
+    "from scipy.stats import linregress\n",
     "import os\n",
     "import requests\n",
-    "import numpy as np\n",
-    "import xesmf as xe"
+    "# Lets import our functions. There are no tests here. Stored separately so as to not make a mess.\n",
+    "# Make sure in right dir first\n",
+    "\n",
+    "os.chdir('/g/data/xv83/np1383/CAFE60_eqpac/')\n",
+    "from a_carbon_math import carbon_flux\n",
+    "from a_model_cutting_functions import CAFE60_eqpac_cutter, cut_regrid_reynolds_sst,cut_process_sst_obs_trends,proc_landschutzer,process_co2_land_trends"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +49,12 @@
     "    Possible to also use DAPPS through xarray and save the files\n",
     "    rather than using requests.\n",
     "    '''\n",
-    "    path_sw='/scratch1/pit071/TPCA/seawifs/'\n",
+    "    path_sw='/g/data/xv83/np1383/external_data/chl/TPCA/seawifs/'\n",
     "    if not os.path.isdir(path_sw):\n",
     "        print('Creating directory: ',path_sw)\n",
     "        os.makedirs(path_sw)\n",
     "       \n",
-    "    path_mod='/scratch1/pit071/TPCA/modis/'\n",
+    "    path_mod='/g/data/xv83/np1383/external_data/chl/TPCA/modis/'\n",
     "    if not os.path.isdir(path_mod):\n",
     "        print('Creating directory: ',path_mod)\n",
     "        os.makedirs(path_mod)\n",
@@ -78,15 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating directory:  /scratch1/pit071/TPCA/seawifs/\n",
-      "Creating directory:  /scratch1/pit071/TPCA/modis/\n",
       "Downloaded: sw1997\n",
       "Downloaded: sw1998\n",
       "Downloaded: sw1999\n",
@@ -6606,7 +6620,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -6620,7 +6634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
