--- a/4-Download or Process Obs.ipynb
+++ b/4-Download or Process Obs.ipynb
@@ -49,7 +49,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36e739ca",
+   "id": "8dbfe4c7-60f5-4421-9a95-d6255f6df173",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c1235a3-63d7-4860-a48a-f5aff85674d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cut_regrid_sst():\n",
+    "    sst_obs=xr.open_dataset('/scratch1/pit071/carbon_data_ch2/sst.mnmean.nc')\n",
+    "    sst_obs=sst_obs.sst.sel(lat=slice(20,-20),lon=slice(120,290),time=slice('1982-01-01','2019-12-01'))\n",
+    "    regridder = xe.Regridder(sst_obs, sst_cafe, 'bilinear',reuse_weights=True)\n",
+    "    sst_obs_regrid=regridder(sst_obs)\n",
+    "    sst_obs_regrid.to_netcdf('/scratch1/pit071/CAFE60/sst.mnmean.regrid.nc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dd78034-1e85-47ff-8458-32204e4072e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42272997-603b-4473-b671-bbdd9f73f22e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd9dc835-dd41-40c5-a673-1753059a77ac",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -76,7 +115,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -90,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
