--- a/5-Calculate_SOI_SST.ipynb
+++ b/5-Calculate_SOI_SST.ipynb
@@ -1687,11 +1687,79 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random old plotting / Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Open Model phyto data\n",
+    "# phy=xr.open_dataset('/scratch1/pit071/CAFE60/phy_15m.nc')\n",
+    "# phy=phy.rename({'yt_ocean':'lat','xt_ocean':'lon'})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#tpca_m_regrid = xr.open_dataset('/scratch1/pit071/CAFE60/TPCA_month_regrid.nc')\n",
+    "\n",
+    "#phy['time']=np.array(phy.indexes['time'].to_datetimeindex(), dtype='datetime64[M]')\n",
+    "#phy=phy.sel(time=tpca_m_regrid.time)\n",
+    "\n",
+    "tpca_m_regrid.sel(time=slice(np.datetime64('2010-03-24'),np.datetime64('2010-04-05'))).mean(dim=['time']).tpca.plot(vmin=0,vmax=0.5),plt.show()\n",
+    "phy.sel(time=slice(np.datetime64('2010-03-01'),np.datetime64('2010-04-01')),ensemble=88).mean(dim=['time']).phy.plot(vmin=0,vmax=0.5),plt.show()\n",
+    "((phy.sel(time=slice(np.datetime64('2010-03-01'),np.datetime64('2010-04-01')),ensemble=88).mean(dim=['time']).phy*893.51)/1000).plot(vmin=0,vmax=0.5),plt.show()\n",
+    "\n",
+    "\n",
+    "a=tpca_m_regrid.sel(time=slice(np.datetime64('2010-03-24'),np.datetime64('2010-04-05'))).mean(dim=['time']).tpca\n",
+    "b=phy.sel(time=slice(np.datetime64('2010-03-01'),np.datetime64('2010-04-01'))).mean(dim=['time','ensemble']).phy \n",
+    "b1=phy.sel(time=slice(np.datetime64('2010-03-01'),np.datetime64('2010-04-01')),ensemble=92).mean(dim=['time']).phy \n",
+    "(a-b).plot(vmin=-0.4,vmax=0.4,cmap='bwr')\n",
+    "plt.show()\n",
+    "\n",
+    "(((b*893.51)/1000)).plot()#(vmin=-0.2,vmax=0.2)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1705,7 +1773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
