--- a/6-Plot_and_compare.ipynb
+++ b/6-Plot_and_compare.ipynb
@@ -1782,7 +1782,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1796,7 +1796,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
