reordered and have prelim results

--- a/2-Data_TPCA_chl_Download.ipynb
+++ b/2-Data_TPCA_chl_Download.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.chdir('/g/data/xv83/np1383/src_CAFE60_eqpac_analysis_code/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load C60_jupyter_imports.py\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -24,17 +35,17 @@
     "# Lets import our functions. There are no tests here. Stored separately so as to not make a mess.\n",
     "# Make sure in right dir first\n",
     "\n",
-    "os.chdir('/g/data/xv83/np1383/src_CAFE60_eqpac_analysis_code/')\n",
-    "from a_carbon_math import carbon_flux\n",
-    "from a_model_cutting_functions import CAFE60_eqpac_cutter, cut_regrid_reynolds_sst,cut_process_sst_obs_trends,proc_landschutzer,process_co2_land_trends"
+    "os.chdir('/g/data/xv83/np1383/src_CAFE60_eqpac_analysis_code/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from downloader import download_TPCA"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,56 +111,7 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def Download_TPCA():\n",
-    "    '''\n",
-    "    Function to download TPCA MODIS and SeaWIFS from nci.org.\n",
-    "    \n",
-    "    Possible to also use DAPPS through xarray and save the files\n",
-    "    rather than using requests.\n",
-    "    '''\n",
-    "    path_sw='/g/data/xv83/np1383/external_data/chl/TPCA/seawifs/'\n",
-    "    if not os.path.isdir(path_sw):\n",
-    "        print('Creating directory: ',path_sw)\n",
-    "        os.makedirs(path_sw)\n",
-    "       \n",
-    "    path_mod='/g/data/xv83/np1383/external_data/chl/TPCA/modis/'\n",
-    "    if not os.path.isdir(path_mod):\n",
-    "        print('Creating directory: ',path_mod)\n",
-    "        os.makedirs(path_mod)\n",
-    "    \n",
-    "    \n",
-    "    tpca_link=['http://dapds00.nci.org.au/thredds/fileServer/ks32/CLEX_Data/TPCA_reprocessing/v2019_01/']\n",
-    "    sensors=['SeaWiFS/tpca_seawifs_','MODIS-Aqua/tpca_modis_aqua_'] #and then year\n",
-    "    sens=['sw','mod']           \n",
-    "    #Download SeaWiFS files from the above array, spaced by each year.\n",
-    "    \n",
-    "    for i in range(0,2): #To do SeaWiFS and then MODIS\n",
-    "        for yr in np.arange(1997,2020):\n",
-    "            if i==0: #SW\n",
-    "                sensor=tpca_link[0]+sensors[0]+str(yr)+'.nc'\n",
-    "                path=path_sw\n",
-    "            elif i==1: #MODIS\n",
-    "                sensor=tpca_link[0]+sensors[1]+str(yr)+'.nc'\n",
-    "                path=path_mod\n",
-    "        \n",
-    "            #Start the download\n",
-    "            try:\n",
-    "                r = requests.get(sensor)#,timeout=s20)\n",
-    "                fileloc=path+sensors[0].split('/')[1]+str(yr)+'.nc'\n",
-    "                if r.status_code!=404:\n",
-    "                    with open(fileloc, 'wb') as f:\n",
-    "                        f.write(r.content)\n",
-    "                    print('Downloaded: ' + sens[i] + str(yr))\n",
-    "                else:\n",
-    "                    print(i,str(r.status_code))\n",
-    "            except KeyboardInterrupt:\n",
-    "                import sys\n",
-    "                sys.exit()\n",
-    "            except:\n",
-    "                print(str(yr)+ sens[i]+'  Unavailable')\n",
-    "            pass"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -210,7 +172,7 @@
     }
    ],
    "source": [
-    "Download_TPCA()"
+    "download_TPCA()"
    ]
   },
   {
@@ -226,8 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Need to Get Phy Working in step 1.\n",
-    "def regrid "
+    "# REGRID"
    ]
   },
   {
@@ -289,39 +250,7 @@
      ]
     }
    ],
-   "source": [
-    "#Load TPCA data\n",
-    "seawifs_tpca=xr.open_mfdataset('/g/data/xv83/np1383/external_data/chl/TPCA/seawifs/*nc').rename({'chl_tpca':'seawifs_tpca'})\n",
-    "modis_tpca=xr.open_mfdataset('/g/data/xv83/np1383/external_data/chl/TPCA/modis/*nc').rename({'chl_tpca':'modis_tpca'})\n",
-    "phy=xr.open_mfdataset('/g/data/xv83/np1383/processed_data/cafe/eqpac/phy_ensmean_1982_15m_.nc')\n",
-    "\n",
-    "#Make TPCA mean data\n",
-    "tpca=xr.merge([seawifs_tpca,modis_tpca])\n",
-    "mean = tpca.to_array(dim='new').mean('new')\n",
-    "tpca_m=tpca.assign(tpca=mean)\n",
-    "\n",
-    "#Calculate monthly average\n",
-    "tpca_m=tpca_m.resample({'time':'M'}).mean(dim='time')\n",
-    "tpca_m['time']=tpca_m.time.astype('datetime64[M]')\n",
-    "\n",
-    "#Regrid TPCA to Model grid\n",
-    "regridder = xe.Regridder(tpca_m, phy, 'bilinear',reuse_weights=False)\n",
-    "#tpca_m_regrid=regridder(tpca_m) \n",
-    "# FOR SOME REASON THIS BROKE AND NOW WE NEED TO USE THE BELOW SOLUTION\n",
-    "\n",
-    "# Hack solution because xESMF v 5.1 or something doesnt accept more than 1 variable???\n",
-    "regrid=[]\n",
-    "for k in tpca_m.data_vars:\n",
-    "    regridded=regridder(tpca_m[k])\n",
-    "    regridded.name=k\n",
-    "    regrid.append(regridded)\n",
-    "tpca_m_regrid=xr.merge(regrid)\n",
-    "\n",
-    "#Fill 0 to NAN\n",
-    "tpca_m_regrid = tpca_m_regrid.where(tpca_m_regrid > 0)\n",
-    "tpca_m_regrid = tpca_m_regrid.bfill('time')\n",
-    "tpca_m_regrid.to_netcdf('/g/data/xv83/np1383/processed_data/obs/TPCA_month_regrid.nc')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
