--- a/3-Process_SST_CO2_obs.ipynb
+++ b/3-Process_SST_CO2_obs.ipynb
@@ -2,11 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "33d62ae7",
+   "execution_count": null,
+   "id": "6d9cfd88-9b64-4403-8d84-3c6291089aa9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.chdir('/g/data/xv83/np1383/src_CAFE60_eqpac_analysis_code/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9cd30e33-94dc-4ba0-a081-763bfea328d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %load C60_jupyter_imports.py\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -21,13 +42,42 @@
     "import xesmf as xe\n",
     "from scipy.stats import linregress\n",
     "import os\n",
-    "\n",
+    "import requests\n",
     "# Lets import our functions. There are no tests here. Stored separately so as to not make a mess.\n",
     "# Make sure in right dir first\n",
     "\n",
-    "os.chdir('/g/data/xv83/np1383/src_CAFE60_eqpac_analysis_code/')\n",
-    "from a_carbon_math import carbon_flux\n",
-    "from a_model_cutting_functions import CAFE60_eqpac_cutter, cut_regrid_reynolds_sst,cut_process_sst_obs_trends,proc_landschutzer,process_co2_land_trends"
+    "os.chdir('/g/data/xv83/np1383/src_CAFE60_eqpac_analysis_code/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "40a89e02-39c1-4e86-92bf-9737fc252b2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/g/data4/xv83/np1383/src_CAFE60_eqpac_analysis_code'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4a8187bf-98f7-4f24-b799-af99f2ac651a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from C60_obs_functions import cut_regrid_reynolds_sst,cut_process_sst_obs_trends,proc_landschutzer,process_co2_land_trends"
    ]
   },
   {
@@ -140,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "0dd78034-1e85-47ff-8458-32204e4072e1",
    "metadata": {},
    "outputs": [
@@ -153,7 +203,21 @@
       "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xesmf/frontend.py:466: FutureWarning: ``output_sizes`` should be given in the ``dask_gufunc_kwargs`` parameter. It will be removed as direct parameter in a future version.\n",
       "  dr_out = xr.apply_ufunc(\n",
       "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xesmf/smm.py:98: UserWarning: Input array is not C_CONTIGUOUS. Will affect performance.\n",
-      "  warnings.warn('Input array is not C_CONTIGUOUS. ' 'Will affect performance.')\n",
+      "  warnings.warn('Input array is not C_CONTIGUOUS. ' 'Will affect performance.')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving 1982 CO2 flux trends\n",
+      "Saving 2000 CO2 flux trends\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xarray/core/dataarray.py:745: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
       "  return key in self.data\n",
       "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xesmf/frontend.py:466: FutureWarning: ``output_sizes`` should be given in the ``dask_gufunc_kwargs`` parameter. It will be removed as direct parameter in a future version.\n",
@@ -169,8 +233,8 @@
     "\n",
     "#cuttropics=False,force=False,\n",
     "proc_landschutzer(True,True)\n",
-    "process_co2_land_trends(True)\n",
-    "proc_landschutzer(False,True) #Do old landshutzer as well"
+    "proc_landschutzer(False,True) \n",
+    "process_co2_land_trends(True) #Force trends for both global and eqpac. Should do both eqpac and global.  "
    ]
   },
   {
