added lots of new jupyter notebook analysis

--- a/3-Process_SST_CO2_obs.ipynb
+++ b/3-Process_SST_CO2_obs.ipynb
@@ -2,30 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6d9cfd88-9b64-4403-8d84-3c6291089aa9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.chdir('/g/data/xv83/np1383/src_CAFE60_eqpac_analysis_code/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "9cd30e33-94dc-4ba0-a081-763bfea328d6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %load C60_jupyter_imports.py\n",
     "%load_ext autoreload\n",
@@ -46,39 +26,18 @@
     "# Lets import our functions. There are no tests here. Stored separately so as to not make a mess.\n",
     "# Make sure in right dir first\n",
     "\n",
-    "os.chdir('/g/data/xv83/np1383/src_CAFE60_eqpac_analysis_code/')"
+    "os.chdir('/g/data/xv83/np1383/src_CAFE60_eqpac_analysis_code/')\n",
+    "from C60_obs_functions import cut_regrid_reynolds_sst,cut_process_sst_obs_trends,proc_landschutzer,process_co2_land_trends, proc_rodenbeck,process_co2_rodenbeck_trends\n",
+    "from C60_helper_functions import check_existing_file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "40a89e02-39c1-4e86-92bf-9737fc252b2d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/g/data4/xv83/np1383/src_CAFE60_eqpac_analysis_code'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "4a8187bf-98f7-4f24-b799-af99f2ac651a",
-   "metadata": {},
    "outputs": [],
-   "source": [
-    "from C60_obs_functions import cut_regrid_reynolds_sst,cut_process_sst_obs_trends,proc_landschutzer,process_co2_land_trends"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -92,86 +51,68 @@
      "text": [
       "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/distributed/node.py:160: UserWarning: Port 8787 is already in use.\n",
       "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 33149 instead\n",
+      "Hosting the HTTP server on port 33111 instead\n",
       "  warnings.warn(\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<distributed.deploy.adaptive.Adaptive at 0x7fd08034cd30>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Set up the remote dask cluster\n",
-    "#from dask.distributed import Client,Scheduler\n",
-    "#from dask_jobqueue import SLURMCluster\n",
-    "#cluster = SLURMCluster(cores=2,memory=\"16GB\")\n",
-    "#client = Client(cluster)\n",
-    "#cluster.scale(cores=4)\n",
-    "#cluster.adapt(minimum=2, maximum=10)"
+    "from dask.distributed import Client,Scheduler\n",
+    "from dask_jobqueue import SLURMCluster\n",
+    "cluster = SLURMCluster(cores=2,memory=\"16GB\")\n",
+    "client = Client(cluster)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "50b191e0-f6f3-49c1-9243-85df1cf2e20d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster.scale(cores=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "49a7177f-a313-4184-8665-e7295310811c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f98e7dff77bc4fc9833aae16a583f0fa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='<h2>SLURMCluster</h2>'), HBox(children=(HTML(value='\\n<div>\\n  <style scoped>\\n    …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cluster"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dbfe4c7-60f5-4421-9a95-d6255f6df173",
+   "id": "c1890726-4cf5-4ad5-a254-35d16b796e3c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "4e7c1ac8-af07-46ee-a9a9-dd86bb1a9534",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xarray/core/dataarray.py:745: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  return key in self.data\n",
-      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xesmf/frontend.py:496: FutureWarning: ``output_sizes`` should be given in the ``dask_gufunc_kwargs`` parameter. It will be removed as direct parameter in a future version.\n",
-      "  ds_out = xr.apply_ufunc(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saving: /g/data/xv83/np1383/processed_data/obs/sst.mnmean.regrid.eqpac.nc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xarray/core/dataarray.py:745: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  return key in self.data\n",
-      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xesmf/frontend.py:496: FutureWarning: ``output_sizes`` should be given in the ``dask_gufunc_kwargs`` parameter. It will be removed as direct parameter in a future version.\n",
-      "  ds_out = xr.apply_ufunc(\n",
-      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xesmf/smm.py:98: UserWarning: Input array is not C_CONTIGUOUS. Will affect performance.\n",
-      "  warnings.warn('Input array is not C_CONTIGUOUS. ' 'Will affect performance.')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saving: /g/data/xv83/np1383/processed_data/obs/sst.mnmean.regrid.global.nc\n",
-      "saving 82 sst trends\n",
-      "saving 2000 sst trends\n",
-      "saving 82 sst trends\n",
-      "saving 2000 sst trends\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Cut out global and eqpac reynolds SST and calculate trends for them. Saved in /scratch1/pit071/CAFE60/processed/obs/\n",
     "#cuttropics=False,force=False,\n",
@@ -183,50 +124,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7ef1fb0-6718-47a4-988e-32b6de9f354c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "id": "0dd78034-1e85-47ff-8458-32204e4072e1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xarray/core/dataarray.py:745: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  return key in self.data\n",
-      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xesmf/frontend.py:466: FutureWarning: ``output_sizes`` should be given in the ``dask_gufunc_kwargs`` parameter. It will be removed as direct parameter in a future version.\n",
-      "  dr_out = xr.apply_ufunc(\n",
-      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xesmf/smm.py:98: UserWarning: Input array is not C_CONTIGUOUS. Will affect performance.\n",
-      "  warnings.warn('Input array is not C_CONTIGUOUS. ' 'Will affect performance.')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving 1982 CO2 flux trends\n",
-      "Saving 2000 CO2 flux trends\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xarray/core/dataarray.py:745: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  return key in self.data\n",
-      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xesmf/frontend.py:466: FutureWarning: ``output_sizes`` should be given in the ``dask_gufunc_kwargs`` parameter. It will be removed as direct parameter in a future version.\n",
-      "  dr_out = xr.apply_ufunc(\n",
-      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xesmf/smm.py:98: UserWarning: Input array is not C_CONTIGUOUS. Will affect performance.\n",
-      "  warnings.warn('Input array is not C_CONTIGUOUS. ' 'Will affect performance.')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Basically the same as above but for landshutzer.\n",
     "#proc_landschutzer(False,True) \n",
@@ -240,71 +140,107 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42272997-603b-4473-b671-bbdd9f73f22e",
+   "id": "0a831040-2f3e-4767-87bd-44bf85c3b0f0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dd9dc835-dd41-40c5-a673-1753059a77ac",
+   "execution_count": 7,
+   "id": "60b39003-4f3b-4241-a7fe-5b4da00ebd52",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved and reloaded intermediate step, now regridding\n",
+      "Normalising to m2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xarray/core/dataarray.py:745: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  return key in self.data\n",
+      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xesmf/frontend.py:466: FutureWarning: ``output_sizes`` should be given in the ``dask_gufunc_kwargs`` parameter. It will be removed as direct parameter in a future version.\n",
+      "  dr_out = xr.apply_ufunc(\n",
+      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xesmf/frontend.py:496: FutureWarning: ``output_sizes`` should be given in the ``dask_gufunc_kwargs`` parameter. It will be removed as direct parameter in a future version.\n",
+      "  ds_out = xr.apply_ufunc(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Regridded\n",
+      "0.102367328\n",
+      "loaded\n",
+      "<xarray.Dataset>\n",
+      "Dimensions:        (lat: 98, lon: 170, time: 768)\n",
+      "Coordinates:\n",
+      "  * time           (time) datetime64[ns] 1957-01-01 1957-02-01 ... 2020-12-01\n",
+      "  * lon            (lon) float64 120.5 121.5 122.5 123.5 ... 287.5 288.5 289.5\n",
+      "  * lat            (lat) float64 -19.36 -18.59 -17.85 ... 17.85 18.59 19.36\n",
+      "Data variables:\n",
+      "    co2flux_ocean  (time, lat, lon) float64 0.02016 0.01209 ... -0.008125\n",
+      "Attributes:\n",
+      "    regrid_method:  bilinear\n",
+      "saving to: /g/data/xv83/np1383/processed_data/obs/rodenbeck_eqpac_regrid.nc\n",
+      "Saved and reloaded intermediate step, now regridding\n",
+      "Normalising to m2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xarray/core/dataarray.py:745: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  return key in self.data\n",
+      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xesmf/frontend.py:466: FutureWarning: ``output_sizes`` should be given in the ``dask_gufunc_kwargs`` parameter. It will be removed as direct parameter in a future version.\n",
+      "  dr_out = xr.apply_ufunc(\n",
+      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-21.04/lib/python3.8/site-packages/xesmf/frontend.py:496: FutureWarning: ``output_sizes`` should be given in the ``dask_gufunc_kwargs`` parameter. It will be removed as direct parameter in a future version.\n",
+      "  ds_out = xr.apply_ufunc(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Regridded\n",
+      "0.663563424\n",
+      "loaded\n",
+      "<xarray.Dataset>\n",
+      "Dimensions:        (lat: 300, lon: 360, time: 768)\n",
+      "Coordinates:\n",
+      "  * time           (time) datetime64[ns] 1957-01-01 1957-02-01 ... 2020-12-01\n",
+      "  * lon            (lon) float64 80.5 81.5 82.5 83.5 ... 436.5 437.5 438.5 439.5\n",
+      "  * lat            (lat) float64 -77.88 -77.63 -77.38 ... 88.87 89.32 89.77\n",
+      "Data variables:\n",
+      "    co2flux_ocean  (time, lat, lon) float64 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0\n",
+      "Attributes:\n",
+      "    regrid_method:  bilinear\n",
+      "saving to: /g/data/xv83/np1383/processed_data/obs/rodenbeck_global_regrid.nc\n",
+      "Saving 1982 CO2 flux trends\n",
+      "Saving 2000 CO2 flux trends\n",
+      "Saving 1982 CO2 flux trends\n",
+      "Saving 2000 CO2 flux trends\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ok also do the rodenbeck CO2 fluxcor product.\n",
+    "proc_rodenbeck(cuttropics=True,force=True)\n",
+    "proc_rodenbeck(cuttropics=False,force=True)\n",
+    "process_co2_rodenbeck_trends(force=True)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ccdf584",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e22a7c30-fb05-4a3d-be5d-d19ccbf681a6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a4547a3-5b01-4b7e-afc3-12b45f944f29",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdfbcb69-a973-4784-ac88-71f29c56c394",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c8313d7-1b0a-4465-8450-cac219481080",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5077f898-78c2-408d-a320-9701eb1cf646",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "866b101d-edd2-4452-89b1-f152b2ece4bf",
+   "id": "93a6c7e7-b4ba-4b38-89d5-f993e0b2cb69",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -329,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
