--- a/7-get_best_ens_members.ipynb
+++ b/7-get_best_ens_members.ipynb
@@ -349,7 +349,11 @@
     }
    ],
    "source": [
-    "\n",
+    "plt.subplot(211)\n",
+    "regional_sst_err.sel(region=region).percenterr.plot()\n",
+    "plt.subplot(212)\n",
+    "regional_err.sel(region=region).percenterr.plot()\n",
+    "plt.legend(['SST Percent Err','CO2 Flux Percent Err'])\n",
     "#plt.legend(['SST','CO2 flux'])"
    ]
   },
