--- a/9-Driver_analysis.ipynb
+++ b/9-Driver_analysis.ipynb
@@ -2803,7 +2803,7 @@
     "    slope, intercept, r_value, p_value, std_err = stats.linregress(x, y)\n",
     "    return np.array([slope, intercept, r_value, p_value, std_err])\n",
     "\n",
-    "# return a new DataArray\n",
+    "# return a new DataArraya\n",
     "stats = xr.apply_ufunc(new_linregress, data['time'], data['data2'],\n",
     "                       input_core_dims=[['time'], ['time']],\n",
     "                       output_core_dims=[[\"parameter\"]],\n",
@@ -2856,7 +2856,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
