update figs for publish

--- a/14-Proces_Cut_cafe60.ipynb
+++ b/14-Proces_Cut_cafe60.ipynb
@@ -16118,21 +16118,25 @@
    },
    "outputs": [],
    "source": [
+    "cafe_y_tx_gm=xr.open_dataset(f'../processed_data/physics_ds/ty_trans_gm_physics_feb7.nc').ty_trans_gm.chunk('auto')\n",
+    "cafe_x_tx_gm=xr.open_dataset(f'../processed_data/physics_ds/tx_trans_gm_physics_feb7.nc').tx_trans_gm.chunk('auto')\n",
+    "\n",
     "calculate_horizontal_tracers_gm=False\n",
     "if calculate_horizontal_tracers_gm==True:\n",
-    "    names=['dic_cafe']  #anth_dic_cafe\n",
-    "    for i,tracer in enumerate([dic_cafe]):# anth_dic_cafe\n",
+    "    \n",
+    "    names=['dic_cafe','anth_dic_cafe']\n",
+    "    for i,tracer in enumerate([dic_cafe,anth_dic_cafe]):# anth_dic_cafe\n",
     "        tracer_u=tracer.rename({'lon':'lon_x'}).chunk('auto')\n",
     "        tracer_v=tracer.rename({'lat':'lat_x'}).chunk('auto')\n",
     "\n",
-    "        tracer_u_interp=tracer_u.interp(lon_x=cafe_x_tx.lon_x) # U is X (lon)\n",
-    "        tracer_v_interp=tracer_v.interp(lat_x=cafe_y_tx.lat_x) # V is Y (lat)\n",
+    "        tracer_u_interp=tracer_u.interp(lon_x=cafe_x_tx_gm.lon_x) # U is X (lon)\n",
+    "        tracer_v_interp=tracer_v.interp(lat_x=cafe_y_tx_gm.lat_x) # V is Y (lat)\n",
     "\n",
     "        # Do need to take mean of adjacent pixels still or not?\n",
     "        adjacent_boxes=False\n",
     "        if adjacent_boxes==True:\n",
-    "            tracer_u_tx=tracer_u_interp.rolling(lat=2).mean()*cafe_x_tx.rolling(lon_x=2).mean()\n",
-    "            tracer_v_tx=tracer_v_interp.rolling(lon=2).mean()*cafe_y_tx.rolling(lat_x=2).mean()\n",
+    "            tracer_u_tx=tracer_u_interp.rolling(lat=2).mean()*cafe_x_tx_gm.rolling(lon_x=2).mean()\n",
+    "            tracer_v_tx=tracer_v_interp.rolling(lon=2).mean()*cafe_y_tx_gm.rolling(lat_x=2).mean()\n",
     "        elif adjacent_boxes==False:\n",
     "            tracer_u_tx=tracer_u_interp*cafe_x_tx_gm\n",
     "            tracer_v_tx=tracer_v_interp*cafe_y_tx_gm\n",
@@ -16146,10 +16150,10 @@
     "        tracer_v_tx.to_netcdf(f'/g/data/xv83/np1383/processed_data/physics_ds/{names[i]}_v_transport_gm.nc')\n",
     "        print('v saved')\n",
     "        \n",
-    "#anth_dic_u_tx_gm=xr.open_dataset('/g/data/xv83/np1383/processed_data/physics_ds/anth_dic_cafe_u_transport_gm.nc').__xarray_dataarray_variable__.chunk('auto')\n",
-    "#anth_dic_v_tx_gm=xr.open_dataset('/g/data/xv83/np1383/processed_data/physics_ds/anth_dic_cafe_v_transport_gm.nc').__xarray_dataarray_variable__.chunk('auto')\n",
-    "#dic_u_tx_gm=xr.open_dataset('/g/data/xv83/np1383/processed_data/physics_ds/dic_cafe_u_transport_gm.nc').__xarray_dataarray_variable__.chunk('auto')\n",
-    "#dic_v_tx_gm=xr.open_dataset('/g/data/xv83/np1383/processed_data/physics_ds/dic_cafe_v_transport_gm.nc').__xarray_dataarray_variable__.chunk('auto')\n",
+    "anth_dic_u_tx_gm=xr.open_dataset('/g/data/xv83/np1383/processed_data/physics_ds/anth_dic_cafe_u_transport_gm.nc').__xarray_dataarray_variable__.chunk('auto')\n",
+    "anth_dic_v_tx_gm=xr.open_dataset('/g/data/xv83/np1383/processed_data/physics_ds/anth_dic_cafe_v_transport_gm.nc').__xarray_dataarray_variable__.chunk('auto')\n",
+    "dic_u_tx_gm=xr.open_dataset('/g/data/xv83/np1383/processed_data/physics_ds/dic_cafe_u_transport_gm.nc').__xarray_dataarray_variable__.chunk('auto')\n",
+    "dic_v_tx_gm=xr.open_dataset('/g/data/xv83/np1383/processed_data/physics_ds/dic_cafe_v_transport_gm.nc').__xarray_dataarray_variable__.chunk('auto')\n",
     "# Units of these should be mmolC/m3 to then SV(kg/s) = mmolC /s so MMol/s *10e6"
    ]
   },
