--- a/20-transports_final.ipynb
+++ b/20-transports_final.ipynb
@@ -18058,10 +18058,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "cf860ed5-0859-4d5d-b140-fc7b820b2bcc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded1\n"
+     ]
+    }
+   ],
    "source": [
     "# Calc Canth Accumulation\n",
     "raw_carbon_1980=adic.sel(time=slice('1980-01-01','2020-01-01'),lat=slice(-6,6)).load() #CHECK LOAD\n",
